--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,7 +324,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #47D3E5;
+			color: #81725D;
 		}
 
 	strong, b {
@@ -2196,8 +2196,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #47D3E5;
-			color: #47D3E5 !important;
+			box-shadow: inset 0 0 0 1px #81725D;
+			color: #81725D !important;
 		}
 
 		input[type="submit"]:active,
@@ -2206,8 +2206,8 @@ input, select, textarea {
 		button:active,
 		.button:active {
 			background-color: rgba(71, 211, 229, 0.2);
-			box-shadow: inset 0 0 0 1px #47D3E5;
-			color: #47D3E5 !important;
+			box-shadow: inset 0 0 0 1px #81725D;
+			color: #81725D !important;
 		}
 
 		input[type="submit"].primary,
@@ -2225,7 +2225,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #47D3E5;
+				background-color: #81725D;
 			}
 
 			input[type="submit"].primary:active,
@@ -2233,7 +2233,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #1ebdd1;
+				background-color: #81725D;
 			}
 
 /* Form */
@@ -2496,8 +2496,8 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #47D3E5;
-			box-shadow: 0 0 0 1px #47D3E5;
+			border-color: #81725D;
+			box-shadow: 0 0 0 1px #81725D;
 		}
 
 	select {
@@ -2528,8 +2528,8 @@ input, select, textarea {
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #47D3E5;
-		box-shadow: 0 0 0 1px #47D3E5;
+		border-color: #81725D;
+		box-shadow: 0 0 0 1px #81725D;
 	}
 
 	::-webkit-input-placeholder {
@@ -2615,14 +2615,14 @@ input, select, textarea {
 	}
 
 	a.icon.style2:hover:before {
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px #81725D;
+		color: #81725D;
 	}
 
 	a.icon.style2:active:before {
 		background-color: rgba(71, 211, 229, 0.1);
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px #81725D;
+		color: #81725D;
 	}
 
 /* Image */
@@ -3472,7 +3472,7 @@ input, select, textarea {
 			-webkit-flex-shrink: 1;
 			-ms-flex-shrink: 1;
 			flex-shrink: 1;
-			width: 50%;
+			/*width: 50%;*/
 			max-width: 48rem;
 			margin: 0 auto;
 		}
@@ -3487,7 +3487,7 @@ input, select, textarea {
 			-ms-flex-shrink: 0;
 			flex-shrink: 0;
 			border-radius: 0;
-			width: 50%;
+			width: 60%;
 		}
 
 			.banner.style1 .image img {
@@ -6382,7 +6382,7 @@ input, select, textarea {
 		}
 
 			.gallery.style1 a:hover {
-				color: #47D3E5;
+				color: #81725D;
 			}
 
 		.gallery.style1 strong, .gallery.style1 b {
@@ -6421,8 +6421,8 @@ input, select, textarea {
 			.gallery.style1 input[type="button"]:hover,
 			.gallery.style1 button:hover,
 			.gallery.style1 .button:hover {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #81725D;
+				color: #81725D !important;
 			}
 
 			.gallery.style1 input[type="submit"]:active,
@@ -6431,8 +6431,8 @@ input, select, textarea {
 			.gallery.style1 button:active,
 			.gallery.style1 .button:active {
 				background-color: rgba(71, 211, 229, 0.2);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #81725D;
+				color: #81725D !important;
 			}
 
 			.gallery.style1 input[type="submit"].primary,
@@ -6450,7 +6450,7 @@ input, select, textarea {
 				.gallery.style1 input[type="button"].primary:hover,
 				.gallery.style1 button.primary:hover,
 				.gallery.style1 .button.primary:hover {
-					background-color: #47D3E5;
+					background-color: #81725D;
 				}
 
 				.gallery.style1 input[type="submit"].primary:active,
@@ -6458,7 +6458,7 @@ input, select, textarea {
 				.gallery.style1 input[type="button"].primary:active,
 				.gallery.style1 button.primary:active,
 				.gallery.style1 .button.primary:active {
-					background-color: #1ebdd1;
+					background-color: #81725D;
 				}
 
 		.gallery.style1 > .forward, .gallery.style1 > .backward {
@@ -6706,7 +6706,7 @@ input, select, textarea {
 		}
 
 			.gallery.style2 a:hover {
-				color: #47D3E5;
+				color: #81725D;
 			}
 
 		.gallery.style2 strong, .gallery.style2 b {
@@ -6745,8 +6745,8 @@ input, select, textarea {
 			.gallery.style2 input[type="button"]:hover,
 			.gallery.style2 button:hover,
 			.gallery.style2 .button:hover {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #81725D;
+				color: #81725D !important;
 			}
 
 			.gallery.style2 input[type="submit"]:active,
@@ -6755,8 +6755,8 @@ input, select, textarea {
 			.gallery.style2 button:active,
 			.gallery.style2 .button:active {
 				background-color: rgba(71, 211, 229, 0.2);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #81725D;
+				color: #81725D !important;
 			}
 
 			.gallery.style2 input[type="submit"].primary,
@@ -6774,7 +6774,7 @@ input, select, textarea {
 				.gallery.style2 input[type="button"].primary:hover,
 				.gallery.style2 button.primary:hover,
 				.gallery.style2 .button.primary:hover {
-					background-color: #47D3E5;
+					background-color: #81725D;
 				}
 
 				.gallery.style2 input[type="submit"].primary:active,
@@ -6782,7 +6782,7 @@ input, select, textarea {
 				.gallery.style2 input[type="button"].primary:active,
 				.gallery.style2 button.primary:active,
 				.gallery.style2 .button.primary:active {
-					background-color: #1ebdd1;
+					background-color: #81725D;
 				}
 
 		.gallery.style2 > .forward, .gallery.style2 > .backward {
@@ -8269,7 +8269,7 @@ input, select, textarea {
 			}
 
 				#wrapper > .invert a:hover {
-					color: #47D3E5;
+					color: #81725D;
 				}
 
 			#wrapper > .invert strong, #wrapper > .invert b {
@@ -8312,8 +8312,8 @@ input, select, textarea {
 				#wrapper > .invert input[type="button"]:hover,
 				#wrapper > .invert button:hover,
 				#wrapper > .invert .button:hover {
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px #81725D;
+					color: #81725D !important;
 				}
 
 				#wrapper > .invert input[type="submit"]:active,
@@ -8322,8 +8322,8 @@ input, select, textarea {
 				#wrapper > .invert button:active,
 				#wrapper > .invert .button:active {
 					background-color: rgba(71, 211, 229, 0.2);
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px #81725D;
+					color: #81725D !important;
 				}
 
 				#wrapper > .invert input[type="submit"].primary,
@@ -8341,7 +8341,7 @@ input, select, textarea {
 					#wrapper > .invert input[type="button"].primary:hover,
 					#wrapper > .invert button.primary:hover,
 					#wrapper > .invert .button.primary:hover {
-						background-color: #47D3E5;
+						background-color: #81725D;
 					}
 
 					#wrapper > .invert input[type="submit"].primary:active,
@@ -8349,7 +8349,7 @@ input, select, textarea {
 					#wrapper > .invert input[type="button"].primary:active,
 					#wrapper > .invert button.primary:active,
 					#wrapper > .invert .button.primary:active {
-						background-color: #1ebdd1;
+						background-color: #81725D;
 					}
 
 			#wrapper > .invert label {
@@ -8375,8 +8375,8 @@ input, select, textarea {
 				#wrapper > .invert input[type="url"]:focus,
 				#wrapper > .invert select:focus,
 				#wrapper > .invert textarea:focus {
-					border-color: #47D3E5;
-					box-shadow: 0 0 0 1px #47D3E5;
+					border-color: #81725D;
+					box-shadow: 0 0 0 1px #81725D;
 				}
 
 			#wrapper > .invert select {
@@ -8407,8 +8407,8 @@ input, select, textarea {
 
 			#wrapper > .invert input[type="checkbox"]:focus + label:before,
 			#wrapper > .invert input[type="radio"]:focus + label:before {
-				border-color: #47D3E5;
-				box-shadow: 0 0 0 1px #47D3E5;
+				border-color: #81725D;
+				box-shadow: 0 0 0 1px #81725D;
 			}
 
 			#wrapper > .invert ::-webkit-input-placeholder {
@@ -8432,14 +8432,14 @@ input, select, textarea {
 			}
 
 			#wrapper > .invert a.icon.style2:hover:before {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5;
+				box-shadow: inset 0 0 0 1px #81725D;
+				color: #81725d;
 			}
 
 			#wrapper > .invert a.icon.style2:active:before {
 				background-color: rgba(71, 211, 229, 0.1);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5;
+				box-shadow: inset 0 0 0 1px #81725D;
+				color: #81725D;
 			}
 
 			#wrapper > .invert ul.alt li {
